logo appearence fix+ nav gradient for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,26 @@ textarea {
     z-index: 0;
 
 }
+.pageEndLogo {
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    bottom: 20%;
+    left: 0;
+    z-index: 9999;
+}
+
+.navGradiant {
+    width: 100%;
+    height: 130px;
+    background-image: -moz-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 100%);
+    background-image: -webkit-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 100%);
+    background-image: -ms-linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 100%);
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
+
 .logoContainer.active{
     opacity: 1;
     -webkit-transition: all 0.5s;
@@ -111,6 +131,7 @@ textarea {
     -o-transition: all 0.5s;
     transition: all 0.5s;
 }
+
 .logoContainer img{
     height: 100%;
 }
